<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_principal">
    <fragment
        android:id="@+id/nav_principal"
        android:name="pe.edu.idat.apppatitasidat.view.fragments.PrincipalFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/nav_galeria"
        android:name="pe.edu.idat.apppatitasidat.view.fragments.GaleriaFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_galeria" />
    <fragment
        android:id="@+id/nav_historial"
        android:name="pe.edu.idat.apppatitasidat.view.fragments.HistorialFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_historial" />
</navigation>